--- a/src/app/shared/components/alert/alert.component.scss
+++ b/src/app/shared/components/alert/alert.component.scss
@@ -40,11 +40,11 @@
   &__actions {
     display: flex;
     font-size: 12px;
-    border-top: 1px solid rgba(0,0,0,0.1);
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    background: #9B9B9B;
+    color: #ffffff;
 
     div {
-      padding: 10px;
+      padding: 8px 10px;
     }
 
     .view {
@@ -56,9 +56,7 @@
     }
 
     .date {
-      font-size: 12px;
       margin-left: auto;
-      color: rgba(0,0,0,0.4);
     }
   }
 }
