--- a/src/app/pages/notifications-page/notifications.component.html
+++ b/src/app/pages/notifications-page/notifications.component.html
@@ -1,8 +1,8 @@
 <div class="entity-view">
-  <div class="entity-view__title">  Alerts & Notifications</div>
+  <div class="entity-view__title">{{'NOTIFICATIONS_TITLE' | translate}}</div>
   <div class="entity-view__navigation">
-    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===0" (click)="setIndex(0)">NOTIFICATIONS</span>
-    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===1" (click)="setIndex(1)">ALERTS</span>
+    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===0" (click)="setIndex(0)">{{'NOTIFICATIONS_TAB_NOTIFICATIONS' | translate}}</span>
+    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===1" (click)="setIndex(1)">{{'NOTIFICATIONS_TAB_ALERTS' | translate}}</span>
   </div>
 </div>
 <md-tab-group class="no-header" [(selectedIndex)]="selectedIndex">
