--- a/src/assets/scss/_notifications.scss
+++ b/src/assets/scss/_notifications.scss
@@ -8,13 +8,23 @@
   background-color: white;
   box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.3);
 
+  &--standalone{
+    position: relative;
+    width: 600px;
+    max-width: 100%;
+  }
+
   &__topnav {
     display: flex;
     padding: 14px 10px;
     align-items: center;
 
+    &--standalone {
+      padding: 14px 20px;
+      border-bottom: 1px solid #F5F5F5;
+    }
+
     span {
-      margin-left: 10px;
       font-size: 13px;
       font-weight: 500;
       color: #39393A;
@@ -26,6 +36,12 @@
       color: #049AE4;
       font-size: 12px;
       font-weight: 500;
+
+      &--standalone {
+        div {
+          margin: 0 0 0 15px;
+        }
+      }
 
       &__separator {
         display: inline-block;
@@ -45,6 +61,10 @@
     height: calc(100% - 96px);
     overflow: auto;
 
+    &--standalone {
+      height: calc(100% - 44px);
+    }
+
     &__no-results {
       padding: 30px 20px;
       font-size: 14px;
@@ -56,12 +76,20 @@
       font-size: 13px;
       font-weight: 500;
       color: #9B9B9B;
+
+      &--standalone {
+        padding: 10px 20px;
+      }
     }
 
     &__notification {
       display: flex;
       border-bottom: 1px solid rgba(0, 0, 0, 0.12);
       cursor: default;
+
+      &--standalone {
+        padding: 2px;
+      }
 
       &:hover {
         background-color: #EBF2FE;
@@ -78,9 +106,24 @@
       }
 
       &__message {
+        display: flex;
+        flex-direction: column;
         width: 100%;
         padding: 8px 0;
         font-size: 14px;
+        min-height: 50px;
+
+        &--standalone {
+          width: 300px;
+        }
+
+        div:first-of-type {
+          margin-top: auto;
+        }
+
+        div:last-of-type{
+          margin-bottom: auto;
+        }
 
         &__date {
           margin-top: 5px;
@@ -91,7 +134,7 @@
 
       &__read {
         display: flex;
-        margin: 0 18px;
+        margin: 0 18px 0 auto;
 
         div {
           display: inline-block;
@@ -125,83 +168,19 @@
   }
 }
 
-notifications {
-  display: block;
-}
-
-.notifications-header {
-
-}
-
 .notifications {
-  height: calc(100vh - 115px - 70px);
+  height: calc(100vh - 235px);
   overflow: auto;
-  background: #EEF0F2;
+  margin: 25px;
 
-  &__content {
-
-    &__no-results {
-      padding: 30px 20px;
-      font-size: 14px;
-    }
-
-    &__title {
-      padding: 10px 10px 10px 50px;
-      background: rgba(0, 0, 0, 0.05);
-      font-size: 12px;
-      font-weight: 500;
-      color: rgba(0, 0, 0, 0.5);
-    }
-
-    &__notification {
-      display: flex;
-      margin: 20px 20px 20px 50px;
-      padding: 10px 20px;
-      max-width: 700px;
-      cursor: pointer;
-      background: white;
-      box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
-
-      &:hover {
-        background-color: #EBF2FE;
-      }
-
-      &__image {
-        width: 65px;
-
-        img {
-          vertical-align: middle;
-          height: 40px;
-        }
-      }
-
-      &__message {
-        padding: 5px 0;
-        font-size: 14px;
-      }
-
-      &__date {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        justify-content: space-between;
-        margin-left: auto;
-        width: 65px;
-        font-size: 10px;
-        color: rgba(0, 0, 0, 0.4);
-
-        div {
-          margin-top: 15px;
-          width: 10px;
-          height: 10px;
-          border-radius: 50%;
-          background: #FE7274;
-        }
-      }
-    }
+  .spinner {
+    padding: 15px;
+    background: #F5F5F5;
 
     md-spinner {
-      margin: 30px auto;
+      margin:auto;
+      height: 30px;
+      width: 30px;
     }
   }
 }
